fix layout issue in contacts section changed the css of the contacts icon to scale for screen size 700plus

--- a/client/src/components/AboutMe/index.css
+++ b/client/src/components/AboutMe/index.css
@@ -156,7 +156,7 @@
   }
 }
 
-@media(min-width: 650px) {
+@media(min-width: 700px) {
   .social-media-item a span {
     display: inline;
     visibility: visible;
