--- a/client/src/components/Contacts/index.css
+++ b/client/src/components/Contacts/index.css
@@ -105,7 +105,8 @@
   }
 }
 
-@media(min-width: 576px) {
+@media(min-width: 768px){
+
   .contacts-card .card-icon {
     padding: 1rem;
   }
@@ -113,15 +114,15 @@
   .contacts-card .card-head {
     margin-bottom: 2rem;
   }
-}
 
-@media(min-width: 768px){
   .contacts {
-    height: 50vh;
+    height: auto;
+    min-height: 400px;
     margin-bottom: none;
   }
 
   .contacts-content {
+    height: auto !important;
     flex-direction: row;
     justify-content: space-around;
   }
